changed onboarding process and font style

--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -1,3 +1,16 @@
+@import '@fontsource/londrina-solid/400.css';
+@import '@fontsource/londrina-solid/300.css';
+@import '@fontsource/londrina-solid/900.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Londrina Solid', sans-serif;
+}
+
+/* 添加这个规则来强制应用字体 */
+* {
+  font-family: 'Londrina Solid', sans-serif !important;
+}
